--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> mercurial1027 </title>
+    <title> PoC for BI Move </title>
   </head>
   <body>
     Here's some stuff to go here.
+    Any tickets that are opened by Tien or Greg will automatically be closed.  With prejudice.
   </body>
 </html>
