--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     Here's some stuff to go here.<br>
     Any tickets that are opened by Tien or Greg will automatically be closed.  With prejudice.
+    Chad plays web developer on TV.
   </body>
 </html>
