Updated README.md with an admonishment, and updated index.html for formatting.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     Here's some stuff to go here.<br>
-    Any tickets that are opened by Tien or Greg will automatically be closed.  With prejudice.
+    Any tickets that are opened by Tien or Greg will automatically be closed.  With prejudice.<br>
     Chad plays web developer on TV.
   </body>
 </html>
