--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
       gtag('js', new Date());
       gtag('config', 'G-D1T4W2CBB1');
     </script>
+    <!-- Google tag (gtag.js) End -->
+    <!-- Microsoft Clarity-->
+    <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "m8gu24w3lx");
+  </script>
+  <!-- Microsoft Clarity End-->
     <meta charset="utf-8">
     <title> PoC for BI Move </title>
   </head>
